# percentage_calculator

./: .gitignore  LICENSE  README.md  format_number.py  has_valid_input.py  main.py  percentage_calculator.py  pyproject.toml  test_format_number.py  test_has_input.py  test_percentage_calculator.py
src/percentage_calculator/: main.py  percentage_calculator.py
test/: test_format_number.py  test_has_input.py  test_percentage_calculator.py
