[tool.poetry]
name = "percentage-calculator"
version = "0.1.1"
description = "print percentage increase of a value"
authors = ["Alexander Alemayhu <alexander@alemayhu.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "percentage_calculator", from = "src" }]

[tool.poetry.scripts]
percentage_calculator = "percentage_calculator.main:main"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
